# non-planar-post-processor

./: README.md  nonplanarpp.py  pyproject.toml
curacc/: cura_trickery.py  gcode_handling.py  settings_parser.py
nonplanarpp/: gcode_handling.py
src/: Body1.stl  cura_trickery.py  test.py
testing/: CE3V3SE_All_parts4x4bed-1.3mf  cura_settings_test.py  ender3v3se_4x2_bed.ini  gcode_handling_test.py
testing/bed_mesh/: 4x4_bed_safety_margin_aligned.stl  Curved_Print_Bed v13.stl
testing/gcode/: CE3V3SE_All_parts - Willow-1_4x4_bed_1x_POST-PROCESSED.gcode  CE3V3SE_willow.gcode  CE3V3SE_willow_CURVED.gcode
testing/models/: All_parts - Willow-1.STL
