# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonplanarpp"
version = "0.1.0"
description = "GCode post processor to print on non-planar surfaces."
readme = "README.md"
authors = [{ name = "Elias Ankerhold", email = "elias.ankerhold@aalto.fi" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: GPL-3.0-only",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20.0",
    "open3d>=0.17.0",
    "pandas>=1.2.0",
    "plotly>=5.17.0",
    "plotly-express>=0.4.1",
    "gcodeparser>=0.2.0",
]

[tool.setuptools]
packages = ['nonplanarpp']